@@ -4,3 +4,5 @@ AM_CFLAGS = @CFLAGS@ @WARN_CFLAGS@
 noinst_LTLIBRARIES = libJudyHS.la
 
 libJudyHS_la_SOURCES = JudyHS.c
+
+DISTCLEANFILES = .deps Makefile
