@@ -4,3 +4,5 @@ AM_CFLAGS = @CFLAGS@ @WARN_CFLAGS@
 noinst_LTLIBRARIES = libJudySL.la
 
 libJudySL_la_SOURCES = JudySL.c
+
+DISTCLEANFILES = .deps Makefile
