@@ -1,1 +1,3 @@
 SUBDIRS = . JudyCommon JudyL Judy1 JudySL JudyHS obj
+
+DISTCLEANFILES = .deps Makefile
