@@ -3,3 +3,6 @@ EXTRA_DIST = $(TESTS)
 TEST_ENVIRONMENT = top_builddir=$(top_builddir)
 
 TESTS	= Checkit
+
+DISTCLEANFILES = .deps Makefile 
+CLEANFILES = Judy1LHCheck Judy1LHTime Makefile SL_Hash SL_Judy SL_Redblack SL_Splay 
